argocd/chat-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec: 
  type: ClusterIP
  selector:
    app: chat-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
