argocd/chat-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /chat
          pathType: Prefix
          backend:
            service:
              name: chat-service
              port:
                number: 80
